add check for clients with the same Nip

--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -4,8 +4,10 @@
 
 {% block body %}
 <form method="post">
+    {%  if error is defined %}
     {% if error %}
         <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+    {% endif %}
     {% endif %}
 
     {% if app.user %}
@@ -16,7 +18,8 @@
 
     <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
     <label for="inputUsername">Username</label>
-    <input type="text" value="{{ last_username }}" name="username" id="inputUsername" class="form-control" autocomplete="username" required autofocus>
+
+    <input type="text"{%  if last_username is defined %} value="{{ last_username }}"{% endif %} name="username" id="inputUsername" class="form-control" autocomplete="username" required autofocus>
     <label for="inputPassword">Password</label>
     <input type="password" name="password" id="inputPassword" class="form-control" autocomplete="current-password" required>
 
