--- a/templates/Products/edit.html.twig
+++ b/templates/Products/edit.html.twig
@@ -28,6 +28,14 @@
                                     {% endif %}
                                 </div>
 
+                                <div class="form-outline mb-4">
+                                    {{ form_widget(products_form.TAX_RATE, {'id': 'form3Example4cg','attr': {'class': 'form-control form-control-lg'}}) }}
+                                    {{ form_label(products_form.TAX_RATE,null, {'label': 'Tax rate', 'label_attr': {'class': 'form-label'}}) }}
+                                    {%  if errors.taxRate is defined %}
+                                        <div style="color: red">{{  errors.taxRate }}</div>
+                                    {% endif %}
+                                </div>
+
                                 <div class="d-flex justify-content-center">
                                     {{ form_row(products_form.Submit, {'attr': {'class': 'btn btn-success btn-block btn-lg gradient-custom-4 text-body' }}) }}
                                 </div>
