--- a/templates/Invoice/generate.html.twig
+++ b/templates/Invoice/generate.html.twig
@@ -151,7 +151,7 @@
                     </div>
                     <div>
                     {{ form_widget(invoice_form.Product.vars.prototype.children.VAT_VALUE) }}
-                    <label class='form-label'>Vat Value</label>
+                    <label class='form-label'>tax Value</label>
                     </div>
                     <div>
                     {{ form_widget(invoice_form.Product.vars.prototype.children.GROSS_VALUE) }}
