--- a/templates/Invoice/generate.html.twig
+++ b/templates/Invoice/generate.html.twig
@@ -150,7 +150,7 @@
                     <label class='form-label'>Net Value</label>
                     </div>
                     <div>
-                    {{ form_widget(invoice_form.Product.vars.prototype.children.VAT_VALUE) }}
+                    {{ form_widget(invoice_form.Product.vars.prototype.children.TAX_VALUE) }}
                     <label class='form-label'>tax Value</label>
                     </div>
                     <div>
