deleting product added

--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -17,9 +17,11 @@ body {
     align-items: center;
   }
 
-  > div:last-child {
+  > div:nth-child(8),
+  > div:last-child
+  {
     margin-top: 0;
-    margin-bottom: 2.7rem;
+    margin-bottom: 1.6rem;
   }
 
   > div:nth-child(5),
@@ -44,4 +46,18 @@ body {
  .error {
    border: 1px solid red !important;
  }
+
+.fa-xmark.fa-solid.delete-product-icon {
+  font-size: 40px;
+  cursor: pointer;
+  padding: 0.5rem;
+  display: none;
+}
+
+
 @import "~bootstrap/scss/bootstrap";
+$fa-font-path: '~@fortawesome/fontawesome-free/webfonts';
+@import '~@fortawesome/fontawesome-free/scss/fontawesome';
+@import '~@fortawesome/fontawesome-free/scss/solid';
+@import '~@fortawesome/fontawesome-free/scss/regular';
+@import '~@fortawesome/fontawesome-free/scss/brands';
