--- a/templates/Invoice/generate.html.twig
+++ b/templates/Invoice/generate.html.twig
@@ -158,7 +158,7 @@
                     <label class='form-label'>Gross Value</label>
                     </div>
                     <div>
-                        <select class="product-select">
+                        <select class="form-select product-select">
                             <option selected disabled hidden>Select Product</option>
                             {% for product in productList %}
                                 <option data-name="{{ product.NAME }}"
@@ -167,6 +167,9 @@
                                         data-product-id="{{ product.ID }}">{{ product.NAME}} </option>
                             {% endfor %}
                         </select>
+                    </div>
+                    <div>
+                    <i class="fa-solid fa-xmark delete-product-icon"></i>
                     </div>
                 </div>
             </div>
